# Comfyui-Model-Resolver

./: .gitignore  LICENSE  README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_request.yml  feature-request.yml
.github/workflows/: ComfyUIdownloads.yml  clone.yml  publish.yml  release.yml
badges/: DOWNLOADS.md
core/: __init__.py  aria2_installer.py  catalog_manager.py  downloader.py  linker.py  matcher.py  metadata_audit.py  metadata_builder.py  network_utils.py  path_templates.py  path_utils.py  progress.py  resolver.py  scanner.py  settings.py  type_utils.py  workflow_analyzer.py  workflow_updater.py
core/log_system/: __init__.py  config.py  log_funcs.py  logger.py
core/sources/: __init__.py  civarchive.py  civitai.py  common.py  huggingface.py  lora_manager_archive.py  model_list.py  popular.py
metadata/: base-models.json  base-models.meta.json  huggingface-author-index.json  model-list.json  model-list.meta.json
tests/: conftest.py  test_downloader_metadata.py  test_downloads_tab_workflow_route.mjs  test_huggingface.py  test_lora_manager_archive.py  test_matcher.py  test_metadata_builder.py  test_metadata_size_audit.py  test_path_security.py  test_path_templates.py  test_refactoring_targets.py  test_refactoring_unification.py  test_resolver_robustness.py  test_scanner.py  test_search_orchestration.py  test_settings.py  test_source_internals.py  test_unification_refactoring.py  test_unified_helpers.py  test_workflow_analyzer.py
web/: linker.js  resolver.js
web/css/: css-variables.css  linker-main.css  linker-shell.css  resolver-main.css  resolver-shell.css
web/log_system/: LoggerUtils.js  config.js  log_funcs.js  logger.js
web/resolver/: globals.js  missing_type_filter.css  model_resolver.js  resolver_dialog.js
web/resolver/actions/: queue_methods.js  resolve_download_methods.js  selection_methods.js
web/resolver/search/: download_target_methods.js  search_panel.js
web/resolver/shell/: lifecycle_graph_methods.js  workflow_state_methods.js  workflow_update_methods.js
web/resolver/utils/: html_utils.js  render_format_methods.js  tree_picker.js  url_utils.js
web/resolver/views/: missing_browser_methods.js  model_info_methods.js  options_methods.js  tabs_loaded_methods.js
web/utils/: ErrorHandler.js  IconUtils.js  ResourceManager.js  css-loader.js  css_loader.js  error_handler.js  icon_utils.js  notification_utils.js  resource_manager.js
